--- a/style.css
+++ b/style.css
@@ -346,7 +346,7 @@
     font-weight: 300;
     text-transform: uppercase;
     color: #fff;
-    margin-top: -4rem;
+    margin-top: 1rem;
   }
   
   .menu-left p {
@@ -438,7 +438,7 @@
     display: block;
     width: 100%;
     height: 100%;
-    border: 0.1rem solid #c49b63;
+    border: 0.1rem solid #090808;
     transition: all 0.3s;
   }
   
@@ -471,7 +471,7 @@
   
   .info {
     font-size: 1.8rem;
-    color: #999;
+    color: #151414;
   }
   /* End of Data */
   
